# faber_fireplace

./: LICENSE  README.md  pyproject.toml
src/faber_fireplace/: __init__.py  faber.py
