[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faber_fireplace"
version = "0.0.1"
authors = [
  { name="Andreas Traa Utkilen", email="andreastraautkilen@gmail.com" },
]
description = "Python package for controlling a Faber fireplace"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Andreas-Utkilen/faber_fireplace"
"Bug Tracker" = "https://github.com/Andreas-Utkilen/faber_fireplace/issues"